ODP-5033 Zeppelin JDK8 compatible changes for external libs